# pyspark-project-template

./: .gitignore  README.md  log4j.properties  setup.cfg  setup.py
build_tool/: build-utils.sh  build.conf  build.sh
cathay/: __init__.py
cathay/config/: __init__.py
cathay/setting/config/: __init__.py  get_config.py
cathay/setting/spark/: __init__.py  spark_session.py
cathay/spark/: spark_session.py
conf/: client.conf  env.conf  hippo.conf  job.conf  jupyter.conf  runtime-env-info.sh
docs/: requirements.txt
jupyter_job/: submit_job.ipynb
my_module/config/: get_config.py
project_module/config/: get_config.py
project_module/spark/: spark_session.py
project_template/common/: __init__.py  utils.py
project_template/job/: __init__.py  basic.py  second_entry.py  submit_job.py
py_pkg/cathay-configger/: setup.py
py_pkg/cathay-decorators/: setup.py
py_pkg/cathay-logger/: setup.py
py_pkg/cathay-spark/: setup.py
py_pkg/cathay-spark/cathay_spark/: __init__.py  spark.py
py_pkg/cathay-time-utils/: setup.py
py_pkg/cathay-time-utils/cathay_time_utils/: time_utils.py
tests/: test_time_utils.py
