[metadata]
name = demo
version = 1.0.0
author = Cathay
author-email = YourEmail
home-page =
description = python project
long-description = file: README.md
keywords = template
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7


[options]
zip_safe = false
python_requires = >= 2.7, <= 3.0
packages = find:
# setup_requires =
#     setuptools
#     flake8
install_requires =
    click==6.6
# only download to setup dir when test
tests_require =
    pytest

[tool:pytest]
addopts = -ra -q -vvv

[flake8]
ignore = D203
max-line-length = 150
exclude = .git,
        __pycache__,
        docs,
        build,
        dist,
        *.egg-info,
        .eggs
import-order-style = google
max-complexity = 10
