[metadata]
name = demo
version = 1.0.0
author = Cathay
author-email = YourEmail
description = python project
long-description = file: README.md
keywords = template
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[options]
zip_safe = false
python_requires = >= 2.7, <= 3.0
packages = find:
install_requires =
    click==6.6
tests_require =
    pytest

[tool:pytest]
addopts = -ra -q -vvv
